--- a/src/scss/layout/_scrollbar.scss
+++ b/src/scss/layout/_scrollbar.scss
@@ -16,12 +16,12 @@
     background: #555;
 }
 /* aside scroll fix*/
-.tw > aside::-webkit-scrollbar-track {
-    background: var(--nav-background-color)!important;
-}
-.tw > aside::-webkit-scrollbar-thumb{
-    background-color: #525a7c!important;
-}
-.tw > aside::-webkit-scrollbar-thumb:hover {
-    background: #5c658b!important;
-}
+// .tw > aside::-webkit-scrollbar-track {
+//     background: var(--nav-background-color)!important;
+// }
+// .tw > aside::-webkit-scrollbar-thumb{
+//     background-color: #525a7c!important;
+// }
+// .tw > aside::-webkit-scrollbar-thumb:hover {
+//     background: #5c658b!important;
+// }
